# delightql

./: .gitignore  Cargo.toml  Makefile  mise.toml
crates/delightql-backends/: Cargo.toml
crates/delightql-backends/src/: error.rs  lib.rs  schema_base.rs  types.rs
crates/delightql-backends/src/duckdb/: connection.rs  db_adapter.rs  executor.rs  introspection.rs  mod.rs  schema.rs  schema_provider.rs  value.rs
crates/delightql-backends/src/executor/: mod.rs
crates/delightql-backends/src/sqlite/: connection.rs  db_adapter.rs  executor.rs  introspect.rs  introspection.rs  mod.rs  schema_impl_backup.rs  value.rs
crates/delightql-cabi/: Cargo.toml
crates/delightql-cabi/src/: factory.rs  lib.rs  types.rs
crates/delightql-cli/: Cargo.toml  build.rs
crates/delightql-cli-siso/: Cargo.toml
crates/delightql-cli-siso/src/: connection.rs  coprocess.rs  error.rs  introspect.rs  lib.rs  parse.rs  profile.rs  schema.rs
crates/delightql-cli/src/: args.rs  attach.rs  bug_report.rs  connection.rs  connection_factory.rs  exec.rs  exec_ng.rs  file_inputs.rs  lib.rs  main.rs  modifiers.rs  output_format.rs  pipe_exec.rs  sanitize.rs  stdin_relation.rs  theme.rs  version_info.rs
crates/delightql-cli/src/commands/: csvstruct.rs  delegate.rs  filemunge.rs  format.rs  from.rs  jstruct.rs  mod.rs  query.rs
crates/delightql-cli/src/repl/: commands.rs  completions.rs  info_panel.rs  mod.rs  multi_pane_tui.rs  name_generator.rs  syntax_highlighter.rs
crates/delightql-cli/src/server/: handler.rs  listener.rs  mod.rs
crates/delightql-cli/src/util/: fingerprint.rs  mod.rs
crates/delightql-core/: Cargo.toml  build.rs
crates/delightql-core/autoload/std/: constants.dql  help.dql  info.dql  json.dql  math.dql  prelude.dql  reshape.dql  string.dql
crates/delightql-core/autoload/sys/: build.dql  meta.dql
crates/delightql-core/bootstrap/: schema.sql
crates/delightql-core/src/: api.rs  bootstrap_schema.rs  enums.rs  lib.rs  lispy.rs  open.rs  session_cwd.rs  sexp_formatter.rs  stdlib_manifest.rs  system.rs  wasm_system.rs
crates/delightql-core/src/bin_cartridge/: mod.rs  registry.rs
crates/delightql-core/src/bin_cartridge/predicates/: between.rs  like.rs  mod.rs
crates/delightql-core/src/bin_cartridge/prelude/: alias.rs  compile.rs  consult.rs  consult_tree.rs  delist.rs  enlist.rs  ground.rs  imprint.rs  mod.rs  mount.rs  reconsult.rs  refresh.rs  run.rs  unconsult.rs  unmount.rs
crates/delightql-core/src/bootstrap/: bin_sync.rs  enums.rs  introspect.rs  mod.rs
crates/delightql-core/src/ddl/: analyzer.rs  body_parser.rs  companion.rs  ddl_builder.rs  manifest.rs  mod.rs
crates/delightql-core/src/ddl_pipeline/: assemble.rs  assemble_manifest.rs  asts.rs  builder.rs  generator.rs  mod.rs  resolver.rs  sql_ast.rs  transformer.rs
crates/delightql-core/src/import/: activation.rs  cartridge.rs  connection.rs  mod.rs  namespace.rs
crates/delightql-core/src/namespace/: mod.rs
crates/delightql-core/src/pipeline/: compiled_query.rs  cst.rs  danger_gates.rs  mod.rs  naming.rs  option_map.rs  pattern.rs  pipe_chain.rs  query_features.rs  recursion_stats.rs  sequential.rs  verdict.rs
crates/delightql-core/src/pipeline/addresser/: mod.rs
crates/delightql-core/src/pipeline/ast_fold/: mod.rs
crates/delightql-core/src/pipeline/ast_transform/: mod.rs
crates/delightql-core/src/pipeline/asts/: addressed.rs  ddl.rs  mod.rs  refined.rs  resolved.rs  unresolved.rs
crates/delightql-core/src/pipeline/builder_v2/: continuation.rs  helpers.rs  mod.rs  predicates.rs  relations.rs
crates/delightql-core/src/pipeline/cfe_precompiler/: definition.rs  mod.rs  provenance.rs  refining.rs
crates/delightql-core/src/pipeline/effect_executor/: mod.rs
crates/delightql-core/src/pipeline/generator_v3/: config.rs  dialect.rs  errors.rs  identifiers.rs  literals.rs  mod.rs  operators.rs  tests.rs
crates/delightql-core/src/pipeline/parser/: mod.rs
crates/delightql-core/src/pipeline/refiner/: analyzer.rs  correlation_alias_fixer.rs  correlation_analyzer.rs  laws.rs  mod.rs  pattern_classifier.rs  rebuilder.rs  types.rs
crates/delightql-core/src/pipeline/resolver/: bubbling.rs  cte_validation.rs  grounding.rs  join_resolver.rs  mod.rs  pattern_resolver.rs  relation_resolver.rs  resolver_fold.rs  schema_utils.rs  set_operations.rs  string_templates.rs  tvf.rs  type_conversion.rs  unification.rs
crates/delightql-core/src/pipeline/sql_ast_v3/: builders.rs  expressions.rs  mod.rs  operators.rs  ordering.rs  query.rs  select_items.rs  statements.rs  table.rs
crates/delightql-core/src/pipeline/sql_optimizer/: advanced.rs  boolean_simplification.rs  cleanup.rs  mod.rs  restructure.rs  visitor.rs
crates/delightql-core/src/pipeline/transformer_v3/: context.rs  cpr_laws.rs  cte_extractor.rs  cte_handling.rs  destructuring_recursive.rs  filter_transformer.rs  finalization.rs  full_outer_expansion.rs  helpers.rs  join_handler.rs  mod.rs  orchestrator.rs  predicate_utils.rs  qualifier_scope.rs  query_wrapper.rs  relation_transformer.rs  schema_context.rs  types.rs  (+5 more)
crates/delightql-core/src/relay/: mod.rs  tests.rs
crates/delightql-core/src/resolution/: entity.rs  mod.rs  registry.rs  resolver.rs
crates/delightql-formatter/: Cargo.toml  build.rs
crates/delightql-formatter/src/: builder.rs  lib.rs  main.rs  rules.rs
crates/delightql-formatter/src/visitor/: base.rs  case.rs  continuations.rs  core.rs  cte.rs  domain.rs  helpers.rs  hooks.rs  mod.rs  operations.rs  pipes.rs
crates/delightql-postgres/: Cargo.toml
crates/delightql-postgres/src/: lib.rs
crates/delightql-sql-adapter/: Cargo.toml
crates/delightql-sql-adapter/src/: lib.rs  siso.rs  tests.rs
crates/delightql-types/: Cargo.toml
crates/delightql-types/src/: db_traits.rs  error.rs  factory.rs  identifier.rs  introspect.rs  lib.rs  namespace.rs  schema.rs  test_utils.rs
crates/delightql-wasm/: Cargo.toml
crates/delightql-wasm/src/: lib.rs
crates/dql-pack-man/: Cargo.toml  build.rs
crates/dql-pack-man/src/: main.rs  results_schema.sql
crates/dql-test-ball-runner/: Cargo.toml
crates/dql-test-ball-runner/src/: main.rs
(+118 files in other folders)
