[package]
name = "delightql-backends"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
delightql-types = { path = "../delightql-types" }
# NOTE: No dependency on delightql-core - backends is for transpilation targets,
# not runtime infrastructure. See documentation/refactoring/disentangle-runtime-target-sqlite.md
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"

# Database dependencies (optional features)
rusqlite = { version = "0.37", optional = true }
duckdb = { version = "1.1.3", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
duckdb = ["dep:duckdb"]
