[package]
name = "delightql-cabi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
delightql-core = { path = "../delightql-core" }
delightql-types = { path = "../delightql-types" }
delightql-backends = { path = "../delightql-backends", default-features = false, features = ["sqlite"] }
delightql-sql-adapter = { path = "../delightql-sql-adapter" }
rusqlite.workspace = true
stacksafe = "1"
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0"

[dev-dependencies]
tempfile.workspace = true
