[package]
name = "delightql-cli-siso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
delightql-types = { path = "../delightql-types" }
csv = "1.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
serde = { workspace = true }
toml = "0.8"
directories = "6"
thiserror.workspace = true
libc = "0.2"
