[package]
name = "dql-pack-man"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "dql-pack-man"
path = "src/main.rs"

[dependencies]
delightql-protocol = { path = "../delightql-protocol" }
clap.workspace = true
rusqlite.workspace = true
sha2 = "0.10"
zstd.workspace = true
tree-sitter.workspace = true

[build-dependencies]
cc = "1.0"
